--- a/school/static/ok/css/bootstrap.css
+++ b/school/static/ok/css/bootstrap.css
@@ -4019,7 +4019,8 @@ tbody.collapse.show {
 }
 
 .navbar-toggler {
-  padding: 0.25rem 0.75rem;
+  float:left !important ;
+  
   font-size: 1.25rem;
   line-height: 1;
   background-color: transparent;
@@ -7714,7 +7715,7 @@ button.bg-dark:focus {
 
 .ml-auto,
 .mx-auto {
-  margin-left: auto !important;
+  margin-left: 0 !important;
 }
 
 @media (min-width: 576px) {
